Fixed text alignment for footer on small devices

--- a/SecretAgentSupply/resources/css/style.css
+++ b/SecretAgentSupply/resources/css/style.css
@@ -178,4 +178,7 @@ footer .container {
   .headline h4 {
     font-size: 0.77rem;
   }
+  footer .container {
+    text-align: center;
+  }
 }
